# job-url-analyzer-mcp

./: .coveragerc  .dockerignore  .env.development  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
docs/: API.md  DEPLOYMENT.md
kubernetes/: configmap.yaml  deployment.yaml  secrets.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: job-analyzer.json
nginx/: nginx.conf
scripts/: docker-setup.sh  k8s-deploy.sh  setup.sh
src/job_url_analyzer/: __init__.py  config.py  crawler.py  database.py  extractor.py  main.py  metrics.py  models.py  orchestrator.py  report_generator.py
src/job_url_analyzer/enricher/: __init__.py  base.py  crunchbase.py  linkedin.py  manager.py
tests/: __init__.py  conftest.py  test_crawler.py  test_enricher.py  test_extractor.py  test_main.py  test_orchestrator.py  test_report_generator.py
