[tool.poetry]
name = "job-url-analyzer"
version = "0.1.0"
description = "MCP server for analyzing job URLs and extracting company information"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = true
packages = [{include = "job_url_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104,<1.0"
uvicorn = {extras = ["standard"], version = ">=0.24,<1.0"}
pydantic = ">=2.5,<3.0"
pydantic-settings = ">=2.1,<3.0"
aiosqlite = ">=0.19,<1.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0,<3.0"}
alembic = ">=1.13,<2.0"
httpx = ">=0.25,<1.0"
selectolax = ">=0.3,<1.0"
aiofiles = ">=23.2,<24.0"
python-multipart = ">=0.0.6,<1.0"
structlog = ">=23.2,<24.0"
opentelemetry-api = ">=1.21,<2.0"
opentelemetry-sdk = ">=1.21,<2.0"
opentelemetry-instrumentation-fastapi = ">=0.42b0,<1.0"
opentelemetry-instrumentation-httpx = ">=0.42b0,<1.0"
robotexclusionrulesparser = ">=1.7,<2.0"
dynaconf = ">=3.2,<4.0"
prometheus-client = ">=0.19,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<8.0"
pytest-asyncio = ">=0.21,<1.0"
pytest-cov = ">=4.1,<5.0"
black = ">=23.11,<24.0"
ruff = ">=0.1,<1.0"
mypy = ">=1.7,<2.0"
pre-commit = ">=3.5,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true